--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             <p class="text-1xl text-gray-600">One stop for searching Github Profiles</p>
         </div>
         <div class="search text-center">
-            <input type="text" id="search_bar" placeholder="Enter Github Username" autocomplete="off" class="border-2 border-black p-3 m-8 w-full max-w-2xl rounded-xl">
-            <button class="sub_btn bg-black text-white p-3 px-8 rounded-xl text-lg font-semibold"><i class="fa-solid fa-magnifying-glass mr-2 text-sm font-bold"></i>Find</button>
+            <input type="text" id="search_bar" placeholder="Enter Github Username" autocomplete="off" class="border-2 border-black p-3 m-8 w-full max-w-2xl rounded-xl sm: max-w-min">
+            <button class="sub_btn bg-black text-white p-3 px-8 rounded-xl text-lg font-semibold sm: text-sm px-6 p-2"><i class="fa-solid fa-magnifying-glass mr-2 text-sm font-bold"></i>Find</button>
         </div>
-        <div id="result" class="flex justify-center">
+        <div id="result" class="flex justify-center sm: pt-4">
         </div>
-        <div id="repos" class="container flex flex-wrap gap-6 mt-10 mb-5 overflow-scroll max-h-[78vh]">
+        <div id="repos" class="container flex flex-wrap gap-6 mt-10 mb-5 overflow-scroll max-h-[78vh] sm: flex-row mx-auto justify-center">
         </div>
     </div>
     <div class="mt-10 text-center">
