--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p class="text-1xl text-gray-600">One stop for searching Github Profiles</p>
         </div>
         <div class="search text-center">
-            <input type="text" id="search_bar" placeholder="Enter Github Username" autocomplete="off" class="border-2 border-black p-3 m-8 w-full max-w-2xl rounded-xl sm: max-w-min">
+            <input type="text" id="search_bar" placeholder="Enter Github Username" autocomplete="off" class="border-2 border-black p-3 m-8 w-full rounded-xl max-w-min lg:max-w-2xl">
             <button class="sub_btn bg-black text-white p-3 px-8 rounded-xl text-lg font-semibold sm: text-sm px-6 p-2"><i class="fa-solid fa-magnifying-glass mr-2 text-sm font-bold"></i>Find</button>
         </div>
         <div id="result" class="flex justify-center sm: pt-4">
